force-app/main/default/objects/Tournament_Sport__c/Tournament_Sport__c.object-meta.xml
<CustomObject>
    <label>Tournament Sport</label>
    <nameField>
        <label>Tournament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournament Sports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>