force-app/main/default/objects/Tournament_Sport__c/fields/Date_Of_Game__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Game__c</fullName>
    <label>Date Of Game</label>
    <type>Date</type>
</CustomField>