force-app/main/default/objects/Tournament_Sport__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>